test/tests/operators/slice/stride_zero.txt
error: stride must not be zero
 --> tests/operators/slice/stride_zero.tql:5:14
  |
5 | slice stride=0
  |              ^ 
  |
